...
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Gallery">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/galleryRecyclerView"
        app:layout_constraintBottom_toTopOf="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:layout_width="wrap_content"
...
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="Quiz" />

        <Button
            android:id="@+id/addImageButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="Add image" />

        <Button
...
