<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/cardTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="32sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/cardImageView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="TODO"
            android:scaleType="fitCenter" />

    </LinearLayout>

    <ImageButton
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:contentDescription="TODO"
        android:padding="8dp"
        android:src="@drawable/baseline_delete_forever_24"/>

</RelativeLayout>

</androidx.cardview.widget.CardView>